--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../public/logo.png" />
+  <link rel="icon" href="./assets/logo.png" />
   <link rel="stylesheet" href="./styles.css" />
   <title>RentaHouse</title>
 </head>
@@ -64,7 +64,7 @@
         </p>
       </div>
       <div class="flex h-auto w-full justify-center">
-        <img src="../public/img_1.png" alt="Log" class="w-fit"/>
+        <img src="./assets/img_1.png" alt="Log" class="w-fit"/>
       </div>
     </section>
 
@@ -94,7 +94,7 @@
       </div>
       <div class="grid grid-cols-3 w-full h-auto">
         <article class="flex flex-col w-80 h-auto pb-5 shadow-lg rounded-lg justify-self-center hover:scale-110 transition-all duration-150">
-          <img src="../public/depto1.jpg" class="w-full h-2/4 rounded-t-lg">
+          <img src="./assets/depto1.jpg" class="w-full h-2/4 rounded-t-lg">
           <h3 class="px-6 py-4 font-semibold">Casa de campo en Alcoy</h3>
           <p class="px-6 font-light mb-3">Hermosisima casa de campo en Alcoy, aprovecha esta oportunidad para pasar tiempo con tus amigos y familia</p>
           <p class="px-6">
@@ -106,7 +106,7 @@
           </p>
         </article>
         <article class="flex flex-col w-80 h-auto pb-5 shadow-lg rounded-lg justify-self-center hover:scale-110 transition-all duration-150">
-          <img src="../public/depto2.jpg" class="w-full h-2/4 rounded-t-lg">
+          <img src="./assets/depto2.jpg" class="w-full h-2/4 rounded-t-lg">
           <h3 class="px-6 py-4 font-semibold">Casa de campo en Alcoy</h3>
           <p class="px-6 font-light mb-3">Hermosisima casa de campo en Alcoy, aprovecha esta oportunidad para pasar tiempo con tus amigos y familia</p>
           <p class="px-6">
@@ -118,7 +118,7 @@
           </p>
         </article>
         <article class="flex flex-col w-80 h-auto pb-5 shadow-lg rounded-lg justify-self-center hover:scale-110 transition-all duration-150">
-          <img src="../public/depto3.jpg" class="w-full h-2/4 rounded-t-lg">
+          <img src="./assets/depto3.jpg" class="w-full h-2/4 rounded-t-lg">
           <h3 class="px-6 py-4 font-semibold">Casa de campo en Alcoy</h3>
           <p class="px-6 font-light mb-3">Hermosisima casa de campo en Alcoy, aprovecha esta oportunidad para pasar tiempo con tus amigos y familia</p>
           <p class="px-6 w-full">
@@ -149,17 +149,17 @@
         <span class="font-light">Obtén nuestra aplicación y visitanos desde donde sea que te encuentres en cualquier momento</span>
         <div class="flex gap-10 mt-5">
           <a class="flex gap-2 bg-gray-900 p-3 text-white w-64 rounded-md cursor-pointer">
-            <img src="../public/Playstore logo.png" alt="Play store" class="w-8">
+            <img src="./assets/playstore.png" alt="Play store" class="w-8">
             <p class="text-sm">GET IN ON<br> <span class="text-xl">Google Play</span></p>
           </a>
           <a class="flex gap-2 bg-gray-900 p-3 text-white w-64 rounded-md cursor-pointer">
-            <img src="../public/app store logo.png" alt="App Store" class="w-8">
+            <img src="./assets/appstore.png" alt="App Store" class="w-8">
             <p class="text-sm">Download on the<br> <span class="text-xl">AppStore</span></p>
           </a>
         </div>
       </div>
       <div class="m-auto">
-        <img src="../public/img_5.png" class="w-11/12"/>
+        <img src="./assets/img_5.png" class="w-11/12"/>
       </div>
     </section>
 
@@ -182,11 +182,11 @@
           <span>Chile, LA</span>
           <div class="flex gap-4 mt-5">
             <a class="flex gap-2 bg-gray-900 p-3 text-white w-64 rounded-md cursor-pointer">
-              <img src="../public/Playstore logo.png" alt="Play store" class="w-8">
+              <img src="./assets/playstore.png" alt="Play store" class="w-8">
               <p class="text-sm">GET IN ON<br> <span class="text-xl">Google Play</span></p>
             </a>
             <a class="flex gap-2 bg-gray-900 p-3 text-white w-64 rounded-md cursor-pointer">
-              <img src="../public/app store logo.png" alt="App Store" class="w-8">
+              <img src="./assets/appstore.png" alt="App Store" class="w-8">
               <p class="text-sm">Download on the<br> <span class="text-xl">AppStore</span></p>
             </a>
           </div>
